<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/frSettings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center"
        android:id="@id/imgLogo"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="96.0dip"
        android:layout_marginTop="@dimen/margin_nano"
        android:layout_marginBottom="@dimen/margin_nano"
        android:src="@drawable/logo"
        android:contentDescription="@string/global_name" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@id/settTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginRight="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_min"
        android:text="@string/inst_sett_text" />
    <CheckBox
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:id="@id/cbAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_all" />
    <CheckBox
        android:id="@id/cbLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_location" />
    <CheckBox
        android:id="@id/cbContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_contacts" />
    <CheckBox
        android:id="@id/cbCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_calls" />
    <CheckBox
        android:id="@id/cbSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_sms" />
    <CheckBox
        android:id="@id/cbChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_chats" />
    <CheckBox
        android:id="@id/cbSites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_sites" />
    <CheckBox
        android:id="@id/cbSim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_sim" />
    <CheckBox
        android:id="@id/cbCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_calendar" />
    <CheckBox
        android:id="@id/cbUnlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_unlock" />
    <CheckBox
        android:id="@id/cbScreenshots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_screenshots" />
    <CheckBox
        android:id="@id/cbSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_nano"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/inst_sett_system" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@id/settTextBotView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginTop="@dimen/margin_nano"
        android:layout_marginRight="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_min"
        android:text="@string/inst_sett_text_bot" />
    <Button
        android:id="@id/btnInstOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_min"
        android:text="@android:string/ok" />
</LinearLayout>