<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/frInstall"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center"
        android:id="@id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="96.0dip"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_min"
        android:src="@drawable/logo"
        android:contentDescription="@string/global_name" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:id="@id/tvHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_min"
        android:layout_marginRight="@dimen/margin_min"
        android:text="@string/inst_Header" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:text="@string/inst_Text"
        android:autoText="false" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:id="@id/tvUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst_Url" />
    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginTop="@dimen/margin_title"
        android:layout_marginRight="@dimen/margin_min"
        android:text="@string/inst_select_Text" />
    <RadioGroup
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_radio"
        android:layout_marginTop="@dimen/margin_min">
        <RadioButton
            android:id="@id/rbKids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_light"
            android:text="@string/inst_select_kids" />
        <RadioButton
            android:id="@id/rbEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_light"
            android:text="@string/inst_select_employee" />
        <RadioButton
            android:id="@id/rbOwn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_light"
            android:text="@string/inst_select_own" />
    </RadioGroup>
    <CheckBox
        android:enabled="false"
        android:id="@id/cbHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginRight="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_title"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/menu_hide_icon" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_min">
        <Button
            android:id="@id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:layout_weight="1.0" />
        <Button
            android:id="@id/btnInstOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>