<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/frLicense"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center"
        android:id="@id/imgLogo"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="96.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginBottom="5.0dip"
        android:src="@drawable/logo"
        android:contentDescription="@string/global_name" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_min"
            android:layout_marginTop="@dimen/margin_min"
            android:layout_marginRight="@dimen/margin_min"
            android:layout_marginBottom="@dimen/margin_text"
            android:text="@string/license_terms" />
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@id/tvLicense"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_title"
            android:layout_marginRight="@dimen/margin_min"
            android:layout_marginBottom="@dimen/margin_text"
            android:text="@string/license_agree" />
        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@id/tvText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_title"
            android:layout_marginRight="@dimen/margin_min"
            android:text="@string/license_text" />
    </LinearLayout>
    <CheckBox
        android:id="@id/cbAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_title"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginRight="@dimen/margin_min"
        android:layout_marginBottom="@dimen/margin_text"
        android:button="@drawable/apptheme_btn_check_holo_light"
        android:text="@string/license_read" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_min">
        <Button
            android:id="@id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inst_decline"
            android:layout_weight="1.0" />
        <Button
            android:id="@id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inst_accept"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>