<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/frActivate"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center"
        android:id="@id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="96.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginBottom="5.0dip"
        android:src="@drawable/logo"
        android:contentDescription="@string/global_name" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:id="@id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_title"
            android:layout_marginTop="@dimen/margin_min"
            android:layout_marginRight="@dimen/margin_min"
            android:layout_marginBottom="@dimen/margin_min"
            android:text="@string/inst_account_information" />
        <EditText
            android:linksClickable="false"
            android:id="@id/etxtAccountEmail"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext|flagNoExtractUi">
            <requestFocus />
        </EditText>
        <EditText
            android:id="@id/etxtAccountPassword"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone|flagNoExtractUi" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_title"
            android:layout_marginTop="@dimen/margin_min"
            android:layout_marginRight="@dimen/margin_min"
            android:layout_marginBottom="@dimen/margin_min"
            android:text="@string/inst_pin_to_settings" />
        <EditText
            android:id="@id/etxtPinNew"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"
            android:hint="@string/hint_enter_pin"
            android:maxLength="15"
            android:inputType="phone|textPassword"
            android:imeOptions="actionNext|flagNoExtractUi" />
        <EditText
            android:id="@id/etxtPinRet"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_text"
            android:layout_marginRight="@dimen/margin_text"
            android:hint="@string/hint_retype_pin"
            android:maxLength="15"
            android:inputType="phone|textPassword"
            android:imeOptions="actionDone|flagNoExtractUi" />
    </LinearLayout>
    <Button
        android:id="@id/btnActivate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_button"
        android:layout_marginRight="@dimen/margin_button"
        android:layout_marginBottom="@dimen/margin_min"
        android:text="@string/dialog_activate" />
</LinearLayout>