<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="250.0dip">
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/dialog_pin_current" />
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/dialog_pin_specify" />
        <EditText
            android:id="@id/etxtNewPassword1"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:hint="@string/hint_change_pin_new"
            android:maxLength="15"
            android:inputType="phone|textPassword"
            android:imeOptions="actionNext|flagNoExtractUi" />
        <TextView
            android:id="@id/textView2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/dialog_pin_retype" />
        <EditText
            android:id="@id/etxtNewPassword2"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:hint="@string/dialog_pin_retype"
            android:maxLength="15"
            android:inputType="phone|textPassword"
            android:imeOptions="actionDone|flagNoExtractUi" />
        <TableRow
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.0">
            <Button
                android:id="@id/btnCancel"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:layout_weight="1.0" />
            <Button
                android:id="@id/btnInstOk"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:layout_weight="1.0" />
        </TableRow>
    </LinearLayout>
</ScrollView>